--- a/package.json
+++ b/package.json
@@ -24,12 +24,12 @@
   "description": "A TypeScript service for managing asynchronous storage using AsyncLocalStorage.",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/@nodesandbox/async-storage.git"
+    "url": "git+https://github.com/nodesandbox/async-storage.git"
   },
   "bugs": {
-    "url": "https://github.com/@nodesandbox/async-storage/issues"
+    "url": "https://github.com/nodesandbox/async-storage/issues"
   },
-  "homepage": "https://github.com/@nodesandbox/async-storage#readme",
+  "homepage": "https://github.com/nodesandbox/async-storage#readme",
   "devDependencies": {
     "typescript": "^5.6.3"
   },
