--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "test": "jest",
     "build": "tsc",
-    "prepublishOnly": "npm run build",
+    "prepublishOnly": "npm test && npm run build",
     "version": "npm version"
   },
   "keywords": [
@@ -43,7 +43,6 @@
     "CONTRIBUTING.md"
   ],
   "dependencies": {
-    "async_hooks": "^1.0.0",
     "jest": "^29.7.0"
   }
 }
