--- a/package.json
+++ b/package.json
@@ -33,16 +33,13 @@
   "devDependencies": {
     "@types/jest": "^29.5.14",
     "ts-jest": "^29.2.5",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.6.3"
+    "typescript": "^5.6.3",
+    "jest": "^29.7.0"
   },
   "files": [
     "dist",
     "LICENSE",
     "README.md",
     "CONTRIBUTING.md"
-  ],
-  "dependencies": {
-    "jest": "^29.7.0"
-  }
+  ]
 }
