--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "@types/jest": "^29.5.14",
     "ts-jest": "^29.2.5",
     "typescript": "^5.6.3",
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "ts-node": "^10.9.2"
   },
   "files": [
     "dist",
